kubernetes/apps/media/immich/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/instance: immich
      app.kubernetes.io/service: immich-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-redis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/instance: immich
      app.kubernetes.io/service: immich-redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: immich
            app.kubernetes.io/instance: immich
            app.kubernetes.io/controller: server
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/instance: immich
      app.kubernetes.io/service: immich-machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: immich
            app.kubernetes.io/instance: immich
            app.kubernetes.io/controller: machine-learning
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
